weechat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weechat
  namespace: weechat
spec:
  ports:
  - port: 9001
    protocol: TCP
  selector:
    app: weechat
