weechat/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weechat
  namespace: weechat
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    certmanager.k8s.io/issuer: "pdxhome-issuer"
    certmanager.k8s.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/proxy-read-timeout: 3h
    nginx.ingress.kubernetes.io/proxy-send-timeout: 3h
spec:
  tls:
  - hosts:
    - irc.greghaynes.net
    secretName: irc-cert
  rules:
  - host: irc.greghaynes.net
    http:
      paths:
      - path: /
        backend:
          serviceName: weechat
          servicePort: 9001
